--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,5 @@
 body {
   margin: 0;
 }
+
+@source inline('border-{red,orange,yellow,lime,green,emerald,teal,cyan,sky,blue,indigo,violet,fuchsia,pink,rose,purple,stone,zinc,gray}-300');
